--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,69 +25,38 @@
   </head>
 
   <body>
-
+  {% import 'bootstrap/wtf.html' as wtf%}
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fa fa-bars"></i>
-        </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('.index') }}">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('.add') }}">Add</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
-            </li>
-              <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('auth.register') }}">Signup</a>
+              <a class="nav-link" href="/auth/login">Register</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+<div class="container">
+<div class="row">
+<div class="col-md-2"> </div>
+<div class="col-md-8">
 
-    <!-- Page Header -->
-    <header class="masthead" style="background-image: url('{{ url_for('static', filename='images/blog7.jpeg') }}')">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="site-heading">
-              <h1>Blog</h1>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
+{{wtf.quick_form(registration_form)}}
 
-    <!-- Main Content -->
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-        {% for post in posts %}
-          <div class="post-preview">
-            <a href="{{ url_for('.post', post_id=post.id) }}">
-              <h2 class="post-title">
-                {{ post.title }}
-              </h2>
-              <h3 class="post-subtitle">
-                {{ post.subtitle }}
-              </h3>
-            </a>
-            <p class="post-meta">Posted by {{ post.author }} on {{ post.date_posted.strftime('%B %d, %Y') }}</p>
-          </div>
-          {% endfor %}
-          <hr>
-        </div>
-      </div>
-    </div>
+      <p> Already have an account? <a href="/auth/login">Proceed to Login</a></p>
+      <p><a href="/">Go back home </a></p>
 
-    <hr>
+</div>
+<div class="col-md-2"></div>
+</div>
+</div>
+
+
 
     <!-- Footer -->
     <footer>
@@ -110,3 +80,4 @@
   </body>
 
 </html>
+
